# a-web-application-using-django

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
news/: admin.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py
news/templates/news/: article_detail.html  article_list.html
src/a_web_application_using_django/: __init__.py
templates/: base.html
